testsuite/tests/tool-ocamlc-locations/marshalled.compilers.reference
File "foo.ml", line 1, characters 14-18:
1 | let x : int = true
                  ^^^^
Error: The constructor true has type bool
       but an expression was expected of type int
